main/default/objects/Program__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Enterprise Enablement</fullName>
            </value>
            <value>
                <fullName>Fulfillment &amp; Assurance Excellence</fullName>
            </value>
            <value>
                <fullName>Legal Requirement</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Network Roadmap</fullName>
            </value>
            <value>
                <fullName>Product Development</fullName>
            </value>
            <value>
                <fullName>Sales Enablement</fullName>
            </value>
            <value>
                <fullName>Technology Innovation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>