main/default/objects/Program__c/fields/Roadmap_Track__c.field-meta.xml
<CustomField>
    <fullName>Roadmap_Track__c</fullName>
    <label>Roadmap Track</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Voice Services</fullName>
            </value>
            <value>
                <fullName>Cloud/Managed Services</fullName>
            </value>
            <value>
                <fullName>Transport/Data Services</fullName>
            </value>
            <value>
                <fullName>Enabling Capabilities</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>