main/default/objects/Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Program_Type__c</columns>
    <columns>Roadmap_Track__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Priority__c</columns>
    <columns>Sponsor__c</columns>
    <columns>Program_End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>