main/default/objects/Program__c/listViews/Product_Development_Initiatives.listView-meta.xml
<ListView>
    <fullName>Product_Development_Initiatives</fullName>
    <columns>NAME</columns>
    <columns>Roadmap_Track__c</columns>
    <columns>Priority__c</columns>
    <columns>Program_Start_Date__c</columns>
    <columns>Program_End_Date__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program_Type__c</field>
        <operation>equals</operation>
        <value>Product Development</value>
    </filters>
    <label>Product Development Initiatives</label>
</ListView>