main/default/objects/Program__c/listViews/Sales_Enablement_Team_Projects.listView-meta.xml
<ListView>
    <fullName>Sales_Enablement_Team_Projects</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Base Price,Streamlined,Salesforce,CRM</value>
    </filters>
    <label>Sales Enablement Programs</label>
</ListView>